--- a/Core/Core.csproj
+++ b/Core/Core.csproj
@@ -5,7 +5,9 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="Google.Apis.Gmail.v1" Version="1.56.0.2510" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="5.0.1" />
+    <PackageReference Include="MimeKit" Version="3.1.1" />
   </ItemGroup>
 
 </Project>
